Foundation and SCSS Files

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,11 +7,14 @@
 
     {% include header.html %}
 
-    <div class="page-content">
+    <div class="page-content columns large-12">
       <div class="wrap">
       {{ content }}
       </div>
     </div>
+
+    <a href="#" class="button">button</a>
+
 
     {% include footer.html %}
 
